# fftwtools

./: .Rbuildignore  .gitignore  DESCRIPTION  Makefile  NAMESPACE  README.md  buildNotesInR.txt  clean  cleanup  configure  configure.ac  fft.R  fft.c  fft.h  fftw3_prb.c  fftwtest.c  scriptRequiredToBuildWithFFTW.txt
.github/workflows/: R-CMD-check.yml
R/: #ffttools.R#  ffttools.R  ffttools.R~  fftw2d.R~  fftwtools.R
bugTest/: fftwtoolsBug.R
doc/: testTimeAndSimpleUse.aux  testTimeAndSimpleUse.out  testTimeAndSimpleUse.tex
doc/auto/: testTimeAndSimpleUse.el
inst/doc/: testTimeAndSimpleUse.Rnw
man/: fftw.Rd  fftw.Rd~  fftw2d.Rd  fftw2d.Rd~  fftw3d.Rd  mvfftw.Rd  mvfftw.Rd~
speedTrials/: .#speedTrialsfftw.R  fftwSetupBasicNearOptimalUse.R  restoreStandardfft.R  speedTrialsfftw.R  testFFTWonMultitaper.R
src/: Makevars  Makevars.in  Makevars.in~  Makevars.win  Makevars.win~  Makevars~  ffttools.c~  ffttools.h~  fftw2d.c~  fftw2d.h~  fftwtools.c  fftwtools.c~  fftwtools.h  fftwtools.h~  fftwtools_init.c  symbols.rds
testScript/: fftwtoolsTest.R
vignettes/: mvfftw.Rd  testTimeAndSimpleUse.bib
